feat: responsive landing

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -20,6 +20,8 @@
   --radii-16: 1rem;
   --radii-full: 9999px;
 
+  /* Breakpoints */
+
   /* ------ */
   /* Colors */
   /* ------ */
@@ -31,3 +33,6 @@
   --eerie-gray: #262626;
   --night-black: #00011A;
 }
+
+@custom-media --bp-md (min-width: 768px);
+@custom-media --bp-lg (min-width: 1024px);
