--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,53 +1,49 @@
 :root {
-  /* ----- */
-  /* Fonts */
-  /* ----- */
-  --ff-fallback: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  --ff-display: "Montserrat", var(--ff-fallback);
-  --ff-body: "Inter", var(--ff-fallback);
-  --ff-decorative: 'Caveat', var(--ff-fallback);
+	/* ----- */
+	/* Fonts */
+	/* ----- */
+	--ff-fallback: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+		'Open Sans', 'Helvetica Neue', sans-serif;
+	--ff-display: 'Urbanist Variable', var(--ff-fallback);
+	--ff-body: 'Inter Variable', var(--ff-fallback);
+	--ff-decorative: 'Caveat', var(--ff-fallback);
 
+	/* ------ */
+	/* Spaces */
+	/* ------ */
 
-  /* ------ */
-  /* Spaces */
-  /* ------ */
+	/* Radius */
+	--radii-4: 0.25rem;
+	--radii-8: 0.5rem;
+	--radii-12: 0.75rem;
+	--radii-16: 1rem;
+	--radii-full: 9999px;
 
-  /* Radius */
-  --radii-4: 0.25rem;
-  --radii-8: 0.5rem;
-  --radii-12: 0.75rem;
-  --radii-16: 1rem;
-  --radii-full: 9999px;
+	/* Z-index */
+	--z-index-1: 1;
+	--z-index-2: 2;
+	--z-index-3: 3;
+	--z-index-4: 4;
+	--z-index-5: 5;
+	--z-index-max: 9999;
 
-  /* Z-index */
-  --z-index-1: 1;
-  --z-index-2: 2;
-  --z-index-3: 3;
-  --z-index-4: 4;
-  --z-index-5: 5;
-  --z-index-max: 9999;
+	/* ------ */
+	/* Colors */
+	/* ------ */
+	--ghost-white-hsl: 218, 100%, 98%;
+	--ghost-white: hsl(var(--ghost-white-hsl));
 
-  /* ------ */
-  /* Colors */
-  /* ------ */
-  --ghost-white-hsl: 218, 100%, 98%;
-  --ghost-white: hsl(var(--ghost-white-hsl));
+	--fiery-rose-hsl: 155, 96%, 85%;
+	--fiery-rose: hsl(var(--fiery-rose-hsl));
 
-  --fiery-rose-hsl: 350, 100%, 66%;
-  --fiery-rose: hsl(var(--fiery-rose-hsl));
+	--megaman-blue-hsl: 155, 96%, 63%;
+	--megaman-blue: hsl(var(--megaman-blue-hsl));
 
-  --megaman-blue-hsl: 191, 96%, 63%;
-  --megaman-blue: hsl(var(--megaman-blue-hsl));
+	--eerie-gray-hsl: 240, 2%, 16%;
+	--eerie-gray: hsl(var(--eerie-gray-hsl));
 
-  --sea-blue-hsl: 213, 100%, 66%;
-  --sea-blue: hsl(var(--sea-blue-hsl));
-
-  --eerie-gray-hsl: 240, 20%, 11%;
-  --eerie-gray: hsl(var(--eerie-gray-hsl));
-
-  --night-black-hsl: 238, 100%, 5%;
-  --night-black: hsl(var(--night-black-hsl));
+	--night-black-hsl: 155, 5%, 7%;
+	--night-black: hsl(var(--night-black-hsl));
 }
 
 @custom-media --bp-sm (min-width: 576px);
